--- a/build.gradle
+++ b/build.gradle
@@ -104,10 +104,10 @@ configurations {
 
 dependencies {
   //provided 'io.warp10:warpscript:+'
-  provided files('/home/jc/Projects/2019/warp10-platform/warp10/archive/warp10-2.1.0-106-g2d446747/bin/warp10-2.1.0-106-g2d446747.jar')
+  provided files('/home/jc/Projects/2019/warp10-platform/warpscript/build/libs/warpscript-2.1.0-143-gf1547c12.jar')
 
   //testCompile'io.warp10:warpscript:+'
-  testCompile files('/home/jc/Projects/2019/warp10-platform/warp10/archive/warp10-2.1.0-106-g2d446747/bin/warp10-2.1.0-106-g2d446747.jar')
+  testCompile files('/home/jc/Projects/2019/warp10-platform/warpscript/build/libs/warpscript-2.1.0-143-gf1547c12.jar')
 
   testImplementation 'junit:junit:4.12'
 
@@ -115,6 +115,9 @@ dependencies {
   // Insert your dependencies here
   //
   //compile group: 'GROUP', name: 'NAME', version: 'VERSION'
+  
+  provided 'com.geoxp:geoxplib:+'
+  provided 'io.fastjson:boon:0.14'
   
   //
   // Arrow
