--- a/warp10.conf
+++ b/warp10.conf
@@ -10,3 +10,5 @@
 // This configuration file is used by the wf tool for documenting
 // your module on the WarpFleet™ site.
 //
+
+warpscript.extension.arrow = io.warp10.arrow.ArrowExtension
