--- a/build.gradle
+++ b/build.gradle
@@ -54,9 +54,10 @@ def getVersionName(String revision) {
 // bintrayApiKey = The bintray API key
 //
 
-project.ext.bintrayRepo = '@BINTRAYREPO#'
-project.ext.bintrayVcsUrl = '@VCSURL@'
-project.ext.bintrayLicenses = [ '@LICENSE@' ]
+project.ext.bintrayRepo = 'maven'
+project.ext.bintrayVcsUrl = 'https://github.com/senx/warp10-ext-arrow'
+project.ext.bintrayLicenses = [ 'Apache-2.0' ]
+project.ext.'signing.gnupg.keyName' = 'B25F654ACDC337788AE80F660678D04645810072'
 
 //
 // GnuPG configuration for signing module
@@ -69,7 +70,7 @@ project.ext.bintrayLicenses = [ '@LICENSE@' ]
 project.ext.group = 'io.warp10'
 project.ext.name = 'warp10-ext-arrow'
 project.ext.uberjar = null != System.getProperty('uberjar')
-project.ext.version = getVersionName('0.0.1') + (project.ext.uberjar ? '-uberjar' : '')
+project.ext.version = getVersionName('0.0.4') + (project.ext.uberjar ? '-uberjar' : '')
 
 version project.ext.version
 
@@ -155,6 +156,7 @@ jar {
   }
   from('.') {
     include 'README.md'
+    include 'io.warp10.ml-warp10-ext-arrow.conf'
   }
 }
 
@@ -162,7 +164,7 @@ shadowJar {
   classifier = ''
 
   manifest {
-   attributes('WarpFleet-Description': 'Conversion to Apache Arrow buffer format')
+   attributes('WarpFleet-Description': 'Arrow extension')
    attributes('WarpFleet-Group': project.ext.group)
    attributes('WarpFleet-Artifact': project.ext.name)
    attributes('WarpFleet-Version': project.ext.version)
@@ -177,6 +179,7 @@ shadowJar {
   }
   from('.') {
     include 'README.md'
+    include 'io.warp10.ml-warp10-ext-forecasting.conf'
   }
 }
 
