--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ def getVersionName(String revision) {
 project.ext.bintrayRepo = 'maven'
 project.ext.bintrayVcsUrl = 'https://github.com/senx/warp10-ext-arrow'
 project.ext.bintrayLicenses = [ 'Apache-2.0' ]
-project.ext.'signing.gnupg.keyName' = 'B25F654ACDC337788AE80F660678D04645810072'
+project.ext.'signing.gnupg.keyName' = 'Insert-Key-Here'
 
 //
 // GnuPG configuration for signing module
