--- a/build.gradle
+++ b/build.gradle
@@ -106,9 +106,9 @@ configurations {
 //
 
 dependencies {
-  provided 'io.warp10:warpscript:2.2.0'
+  provided 'io.warp10:warpscript:+'
 
-  testCompile'io.warp10:warpscript:2.2.0'
+  testCompile'io.warp10:warpscript:+'
   
   testImplementation 'junit:junit:4.12'
 
