--- a/build.gradle
+++ b/build.gradle
@@ -121,8 +121,10 @@ dependencies {
   // Arrow
   //
 
-  compile 'org.apache.arrow:arrow-memory:0.14.1'
-  compile 'org.apache.arrow:arrow-vector:0.14.1'
+  compile 'org.apache.arrow:arrow-memory-core:1.0.1'
+  compile 'org.apache.arrow:arrow-memory-unsafe:1.0.1'
+  compile 'org.apache.arrow:arrow-memory-netty:1.0.1'
+  compile 'org.apache.arrow:arrow-vector:1.0.1'
   compile 'io.netty:netty-buffer:4.1.27.Final'
   compile 'io.netty:netty-common:4.1.27.Final'
   compile 'io.fastjson:boon:0.14'
