--- a/build.gradle
+++ b/build.gradle
@@ -41,45 +41,45 @@ repositories {
 }
 
 configurations {
-  provided
+    provided
 }
 
 //
 // Dependencies of the project
 //
 dependencies {
-  compileOnly group: 'io.warp10', name: 'warpscript', version: '2.+'
-  testCompileOnly  'io.warp10:warpscript:+'
-  testImplementation 'junit:junit:4.12'
-  //
-  // Arrow
-  //
-  implementation 'org.apache.arrow:arrow-memory-core:1.0.1'
-  implementation 'org.apache.arrow:arrow-memory-unsafe:1.0.1'
-  implementation 'org.apache.arrow:arrow-memory-netty:1.0.1'
-  implementation 'org.apache.arrow:arrow-vector:1.0.1'
-  implementation 'io.netty:netty-buffer:4.1.27.Final'
-  implementation 'io.netty:netty-common:4.1.27.Final'
-  implementation 'io.fastjson:boon:0.14'
+    compileOnly group: 'io.warp10', name: 'warpscript', version: '2.+'
+    testImplementation 'io.warp10:warpscript:+'
+    testImplementation 'junit:junit:4.12'
+    //
+    // Arrow
+    //
+    implementation 'org.apache.arrow:arrow-memory-core:1.0.1'
+    implementation 'org.apache.arrow:arrow-memory-unsafe:1.0.1'
+    implementation 'org.apache.arrow:arrow-memory-netty:1.0.1'
+    implementation 'org.apache.arrow:arrow-vector:1.0.1'
+    implementation 'io.netty:netty-buffer:4.1.27.Final'
+    implementation 'io.netty:netty-common:4.1.27.Final'
+    implementation 'io.fastjson:boon:0.14'
 }
 
 test {
-  useJUnit()
+    useJUnit()
 }
 
 sourceSets {
-  main {
-    compileClasspath = compileClasspath + configurations.provided
-  }
+    main {
+        compileClasspath = compileClasspath + configurations.provided
+    }
 }
 
 eclipse.classpath.plusConfigurations += [configurations.provided]  // Eclipse users only
 
 // for IntelliJ users
 idea {
-  module {
-    scopes.PROVIDED.plus += [configurations.provided]
-  }
+    module {
+        scopes.PROVIDED.plus += [configurations.provided]
+    }
 }
 
 java {
@@ -88,53 +88,53 @@ java {
 }
 
 jar {
-  manifest {
+    manifest {
         attributes('WarpFleet-Description': project.description)
         attributes('WarpFleet-Group': project.group)
         attributes('WarpFleet-Artifact': project.name)
         attributes('WarpFleet-Version': project.version)
-  }
+    }
 
-  from('src/main/warpscript') {
-    //
-    // Only consider macros which are in our namespace
-    //
-    include project.group + '/' + project.name + '/*.mc2'
-    include project.group + '/' + project.name + '/**/*.mc2'
-  }
+    from('src/main/warpscript') {
+        //
+        // Only consider macros which are in our namespace
+        //
+        include project.group + '/' + project.name + '/*.mc2'
+        include project.group + '/' + project.name + '/**/*.mc2'
+    }
 
-  from('.') {
-      include 'README.md'
-      include project.group + '-' + project.name + '.conf'
-  }
+    from('.') {
+        include 'README.md'
+        include project.group + '-' + project.name + '.conf'
+    }
 }
 
 shadowJar {
-  classifier = ''
+    classifier = ''
 
-  manifest {
+    manifest {
         attributes('WarpFleet-Description': project.description)
         attributes('WarpFleet-Group': project.group)
         attributes('WarpFleet-Artifact': project.name)
         attributes('WarpFleet-Version': project.version)
-  }
+    }
 
-  from('src/main/warpscript') {
-    //
-    // Only consider macros which are in our namespace
-    //
-    include project.group + '/' + project.name + '/*.mc2'
-    include project.group + '/' + project.name + '/**/*.mc2'
-  }
+    from('src/main/warpscript') {
+        //
+        // Only consider macros which are in our namespace
+        //
+        include project.group + '/' + project.name + '/*.mc2'
+        include project.group + '/' + project.name + '/**/*.mc2'
+    }
 
-  from('.') {
-      include 'README.md'
-      include project.group + '-' + project.name + '.conf'
-  }
+    from('.') {
+        include 'README.md'
+        include project.group + '-' + project.name + '.conf'
+    }
 
-  dependencies {
-    exclude(dependency('org.slf4j::'))
-  }
+    dependencies {
+        exclude(dependency('org.slf4j::'))
+    }
 }
 
 shadowJar.dependsOn(test)
@@ -145,94 +145,94 @@ shadowJar.dependsOn(test)
 publishing {
     publications {
         maven(MavenPublication) {
-      groupId project.group
-      artifactId project.name
-      version = project.version
-      from components.java
-      pom {
-        name = project.name
-        description = project.description
-        url = 'https://github.com/senx/' + project.name
+            groupId project.group
+            artifactId project.name
+            version = project.version
+            from components.java
+            pom {
+                name = project.name
+                description = project.description
+                url = 'https://github.com/senx/' + project.name
 
-        scm {
-          connection = 'scm:git:git://github.com/senx/' + project.name
-          developerConnection = 'scm:git:ssh://github.com/senx/' + project.name
-          url = 'https://github.com/senx/' + project.name
-        }
+                scm {
+                    connection = 'scm:git:git://github.com/senx/' + project.name
+                    developerConnection = 'scm:git:ssh://github.com/senx/' + project.name
+                    url = 'https://github.com/senx/' + project.name
+                }
 
-        licenses {
-          license {
-            name = 'The Apache License, Version 2.0'
-            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-          }
-        }
+                licenses {
+                    license {
+                        name = 'The Apache License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
 
-        developers {
-          developer {
-            id = 'senx'
-            name = 'SenX'
-            email = 'contact@senx.io'
-          }
-        }
-      }
+                developers {
+                    developer {
+                        id = 'senx'
+                        name = 'SenX'
+                        email = 'contact@senx.io'
+                    }
+                }
+            }
         }
         uberJar(MavenPublication) {
-      groupId project.group
-      artifactId project.name
-      artifact(shadowJar)
-      artifact(tasks['javadocJar'])
-      artifact(tasks['sourcesJar'])
-      version = project.version + '-uberjar'
+            groupId project.group
+            artifactId project.name
+            artifact(shadowJar)
+            artifact(tasks['javadocJar'])
+            artifact(tasks['sourcesJar'])
+            version = project.version + '-uberjar'
 
-      pom {
-        name = project.name
-        description = project.description
-        url = 'https://github.com/senx/' + project.name
+            pom {
+                name = project.name
+                description = project.description
+                url = 'https://github.com/senx/' + project.name
 
-        scm {
-          connection = 'scm:git:git://github.com/senx/' + project.name
-          developerConnection = 'scm:git:ssh://github.com/senx/' + project.name
-          url = 'https://github.com/senx/' + project.name
-        }
+                scm {
+                    connection = 'scm:git:git://github.com/senx/' + project.name
+                    developerConnection = 'scm:git:ssh://github.com/senx/' + project.name
+                    url = 'https://github.com/senx/' + project.name
+                }
 
-        licenses {
-          license {
-            name = 'The Apache License, Version 2.0'
-            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-          }
-        }
+                licenses {
+                    license {
+                        name = 'The Apache License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
 
-        developers {
-          developer {
-            id = 'senx'
-            name = 'SenX'
-            email = 'contact@senx.io'
-          }
-        }
-      }
+                developers {
+                    developer {
+                        id = 'senx'
+                        name = 'SenX'
+                        email = 'contact@senx.io'
+                    }
+                }
+            }
         }
     }
 
     repositories {
         if (project.hasProperty('ossrhUsername')) {
-      maven {
-        url 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
-        credentials {
-          username ossrhUsername
-          password ossrhPassword
-        }
-      }
+            maven {
+                url 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
+                credentials {
+                    username ossrhUsername
+                    password ossrhPassword
+                }
+            }
         }
         if (project.hasProperty('nexusUsername')) {
-      maven {
-        name 'nexus'
-        allowInsecureProtocol true
-        url "$nexusHost/repository/maven-releases/"
-        credentials {
-          username nexusUsername
-          password nexusPassword
-        }
-      }
+            maven {
+                name 'nexus'
+                allowInsecureProtocol true
+                url "$nexusHost/repository/maven-releases/"
+                credentials {
+                    username nexusUsername
+                    password nexusPassword
+                }
+            }
         }
     }
 }
@@ -242,19 +242,19 @@ artifacts {
 }
 
 if (project.hasProperty('ossrhUsername')) {
-  nexusStaging {
+    nexusStaging {
         packageGroup = 'io.warp10'
         username ossrhUsername
         password ossrhPassword
-  }
+    }
 }
 
 //
 // Artifact Signing
 //
 if (project.hasProperty('signing.gnupg.keyName')) {
-  signing {
+    signing {
         useGpgCmd()
         sign publishing.publications
-  }
+    }
 }
