--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 //
-//   Copyright 2019  SenX S.A.S.
+//   Copyright 2019-23  SenX S.A.S.
 //
 //   Licensed under the Apache License, Version 2.0 (the "License");
 //   you may not use this file except in compliance with the License.
@@ -48,7 +48,7 @@ configurations {
 // Dependencies of the project
 //
 dependencies {
-    compileOnly group: 'io.warp10', name: 'warpscript', version: '2.+'
+    provided 'io.warp10:warpscript:+'
     testImplementation 'io.warp10:warpscript:+'
     testImplementation 'junit:junit:4.12'
     //
